fixed sidebar and header not responsive

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,7 @@ body {
 
 @media (max-width: 767.98px) {
   .sidebar {
-    top: 5rem;
+    top: 4rem;
   }
 }
 .sidebar {
@@ -78,6 +78,15 @@ body {
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
+.sidebar-wrapper {
+  position: relative;
+  max-height: calc(100vh - 75px);
+  min-height: 100%;
+  overflow: auto;
+  width: 260px;
+  z-index: 4;
+  padding-bottom: 100px;
+}
 
 .logo {
     padding: 10px 5px;
@@ -100,8 +109,9 @@ body {
   font-size: 24px;
 }
 .head-icon {
-  float: right;
-  font-size: 24px;
+  /* float: right; */
+  font-size: 20px;
+  margin-bottom: 1vh;
 }
 .sensor-icon {
   font-size: 50px;
@@ -129,6 +139,12 @@ body {
 .sidebar-heading {
   font-size: .75rem;
   text-transform: uppercase;
+}
+
+@media (min-width: 576px) {
+  .container, .container-sm {
+        max-width: 100% !important;
+  }
 }
 
 /*
